[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = "0.9.0"
itertools = "0.10.5"
ndarray = "0.15.6"
nom = "7.1.1"
nom-supreme = "0.8.0"
pathfinding = "4.1.1"
rayon = "1.6.1"
regex = "1.7.0"
serde_json = "1.0.89"
tinyvec = "1.6.0"
vector2d = "2.2.0"
